# real-time-tomo-prad

./: LICENSE  README.rst  pyproject.toml
src/data/: shot_data_84762.mat  shot_data_84764.mat  shot_data_85138.mat  shot_data_85166.mat  shot_data_85174.mat  shot_data_85184.mat  shot_data_85185.mat  shot_data_85192.mat  shot_data_85194.mat  shot_data_85199.mat  shot_data_85269.mat  shot_data_85270.mat  shot_data_85350.mat  shot_data_85353.mat  shot_data_85357.mat  shot_data_85432.mat  shot_data_85434.mat  shot_data_85439.mat  shot_data_85487.mat  shot_data_85489.mat  shot_data_85815.mat  shot_data_85816.mat  shot_data_85818.mat  shot_data_85819.mat  shot_data_85820.mat  shot_data_85997.mat  shot_data_86015.mat  shot_data_86063.mat  shot_data_86088.mat  shot_data_86089.mat  shot_data_86117.mat  shot_data_86210.mat  shot_data_86289.mat  shot_data_86436.mat  shot_data_86462.mat  shot_data_86554.mat  shot_data_86572.mat  shot_data_86585.mat  shot_data_86591.mat  shot_data_86605.mat  (+10 more)
src/results/: bolometer_diagnostic.ipynb  fbt_vs_liuqe.ipynb
src/results/campaign_analysis/: campaign_analysis.py  campaign_analysis.sh  diverted_time_ranges.npy  paper_results.ipynb  shot_infos.npy
src/results/campaign_analysis/campaign_study_results/: shot_84762.npy  shot_84764.npy  shot_85138.npy  shot_85166.npy  shot_85174.npy  shot_85184.npy  shot_85185.npy  shot_85192.npy  shot_85194.npy  shot_85199.npy  shot_85269.npy  shot_85270.npy  shot_85350.npy  shot_85353.npy  shot_85357.npy  shot_85432.npy  shot_85434.npy  shot_85439.npy  shot_85487.npy  shot_85489.npy  shot_85815.npy  shot_85816.npy  shot_85818.npy  shot_85819.npy  shot_85820.npy  shot_85997.npy  shot_86015.npy  shot_86063.npy  shot_86088.npy  shot_86089.npy  shot_86117.npy  shot_86210.npy  shot_86289.npy  shot_86436.npy  shot_86462.npy  shot_86554.npy  shot_86572.npy  shot_86585.npy  shot_86591.npy  shot_86605.npy  (+10 more)
src/results/hyperparameter_study_results/: generate_phantoms.py  hyperparameter_study.py  hyperparameter_study.sh  hyperparameter_tuning.ipynb
src/results/hyperparameter_study_results/phantom_analysis_results/: phantom_0.npy  phantom_1.npy  phantom_10.npy  phantom_100.npy  phantom_101.npy  phantom_102.npy  phantom_103.npy  phantom_104.npy  phantom_105.npy  phantom_106.npy  phantom_107.npy  phantom_108.npy  phantom_109.npy  phantom_11.npy  phantom_110.npy  phantom_111.npy  phantom_112.npy  phantom_113.npy  phantom_114.npy  phantom_115.npy  phantom_116.npy  phantom_117.npy  phantom_118.npy  phantom_119.npy  phantom_12.npy  phantom_120.npy  phantom_121.npy  phantom_122.npy  phantom_123.npy  phantom_124.npy  phantom_125.npy  phantom_126.npy  phantom_127.npy  phantom_128.npy  phantom_129.npy  phantom_13.npy  phantom_130.npy  phantom_131.npy  phantom_132.npy  phantom_133.npy  (+960 more)
src/results/hyperparameter_study_results/phantoms/: magnetic_equilibrium.npy  phantoms_trim_values.npy  solps_phantom_inner_leg.npy  solps_phantom_outer_leg.npy  solps_phantom_ring_and_core.npy  xpt_rad.npy
src/routines/: rt_roi_prad.py
src/routines/tomo_fusion/: bayesian_computations.py  functionals_definition.py  reg_param_est.py
src/routines/tomo_fusion/tools/: helpers.py  plotting_fcts.py
src/tcv_geometry/: bolo_LoS_params.npy  bolo_coords_r.npy  bolo_coords_z.npy  etendues.npy  tcv_mask_1_subpixels_NINO.npy  tcv_mask_sinogram.npy  tcv_shape_coords.npy
